Bug 1897597 part 1: Split TextLeafRange code to check whether frames are on different lines into a separate function. r=morgan

There should be no functional change here.
However, we're going to need to reuse this elsewhere in the next patch.

Differential Revision: https://phabricator.services.mozilla.com/D210986